--- a/static/index.html
+++ b/static/index.html
@@ -214,6 +214,8 @@
 
   footer{text-align:center;padding:20px 0;border-top:1px solid rgba(255,255,255,.06);color:var(--muted);font-size:14px;}
   @media(max-width:979px){ footer{ padding:16px 0; font-size:13px; } }
+  .learnmore-btn {
+  display: none !important;
 </style>
 </head>
 <body>
